# Brand-Forge

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  main.py  pyproject.toml  render-build.sh  requirements.txt
agents/: brand_interpreter.py  brand_voice_evaluator.py  content_strategist.py  content_writer.py
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js  results.js  samples.js
graph/: pipeline.py  state.py
rag/: __init__.py  brand_memory.py
scraper/: web_scraper.py
